# Rakathon2025

./: .gitignore  README.md  app.py  compare_contours.py  compare_contours_in_slices.py  constants.py  contour_slice_test_generator.py  contours_finder.py  core.py  ct.ipynb  data_processing.py  detect_intersects.py  fourier.ipynb  histogram.py  itk.py  log.txt  logger.py  main.html  main.py  mask.py  organize_new.py  process_rs.py  pyproject.toml  rand2.pkl  sample_sphere.py  test_velocity.py  visualize_conturs.py
application/: app.py
application/old/static/: styles.css
application/static/js/: main.js  view.js
application/static/js/components/: AnimationController.js
application/static/js/ui/: ContourAdjustmentPanel.js  ImagePanel.js  MeasurementSelector.js  PlaybackControls.js  StatusPanel.js
application/templates/: index.html
contours/: compare_contours.py  compare_contours_in_slices.py  contour_slice_test_generator.py  itk.py
david_dicom/: generate_pngs_from_organized_ct.py  organize_ct_by_date_frame.py
dicom_processing/: organize.py  organize2.py
misc_data/: log.txt  popis
misc_scripts/: mask.py  tumor_generator.py
notebooks/: ct.ipynb
pointcloud_alignment/: fourier.ipynb  fourier.py  torch_helpers.py
tools/: logger.py
vis/: visualize_conturs.py
